Globalized downloadJPackage & jlink tasks and some params.